add ststic search btn

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
+    <div>
+        <input id="searchIn" type="text" value="dogs">
+        <input id="searchBtn" type="button" value="search">
+    </div>
     <div id="container">
-        <img>
+        <!-- <img> -->
     </div>
     <script src="script.js"> </script>
 </body>
