--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
         <input id="searchIn" type="text" value="dogs">
         <input id="searchBtn" type="button" value="search">
     </div>
+    <div>
+        <p id="one">bmw</p>
+        <p id="two">pizza</p>
+        <p id="three">bubble</p>
+    </div>
+    <div id="preloader">
+</div>
     <div id="container">
         <!-- <img> -->
     </div>
+    <!-- <div class="loading">Loading...</div> -->
+    
     <script src="script.js"> </script>
 </body>
 </html>
