--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,13 +18,18 @@
         <p id="two">pizza</p>
         <p id="three">bubble</p>
     </div>
-    <div id="preloader">
-</div>
+
     <div id="container">
-        <!-- <img> -->
+
+
     </div>
-    <!-- <div class="loading">Loading...</div> -->
-    
+    <div id="preloader">
+        <!-- <div class="loading">Loading...</div> -->
+        <img src="img\preloader.gif" alt="я джифка">
+    </div>
+
+
     <script src="script.js"> </script>
 </body>
+
 </html>
