add not committed css n html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
-    <div>
+    <div class="search-text">
+        <p>Search keyword</p>
+    </div>
+    <div class="container-hold-input">
         <input id="searchIn" type="text" value="dogs">
         <input id="searchBtn" type="button" value="search">
     </div>
-    <div>
-        <p id="one">bmw</p>
-        <p id="two">pizza</p>
-        <p id="three">bubble</p>
+    <div class="container-hold-static">
+        <button id="one">bmw</button>
+        <button id="two">pizza</button>
+        <button id="three">bubble</button>
     </div>
 
     <div id="container">
